[RTL-ifcvt] Improve conditional select ops on immediates (fix failing x86_64 cmov tests)

PR rtl-optimization/67103
	* ifcvt.c (noce_try_store_flag_constants): Move
	x = (-(test != 0) & (b - a)) + a transformation to...
	(noce_try_cmove): ... Here.  Try it if normal conditional
	move fails.

From-SVN: r226853